--- a/pages/img-list/img-list.wxss
+++ b/pages/img-list/img-list.wxss
@@ -1,4 +1,18 @@
 /*图片 */
+.upload-btn{
+  position: fixed;
+  z-index: 1;
+  top: 10px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  background: #eee;
+  color: #666;
+  font-size: 12px;
+}
 .title{
   text-align: center;
   line-height: 40px;
@@ -20,11 +34,23 @@
   border: 1px solid #ddd;
   box-shadow: 0px 0px 10px #ddd;
   background: #f7f7f7;
+  margin-bottom: 2px;
 }
 .img-src{
   max-width: 100%;
   max-height: 100%;
 }
 .img-title{
+  display: inline-block;
+  height: 25px;
+  line-height: 25px;
+  font-size: 12px;
+  border: 1px solid #fff;
+}
+.input-title{
+  height: 25px;
+  line-height: 25px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
   font-size: 12px;
 }
