--- a/pages/photo-list/photo-list.wxss
+++ b/pages/photo-list/photo-list.wxss
@@ -4,6 +4,23 @@
   line-height: 40px;
   color: #666;
 }
+.form-box{
+  padding: 10px 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.input{
+  flex: 1;
+  padding-left: 5px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  height: 28px;
+  font-size: 14px;
+  line-height: 28px;
+}
+.btn{
+  margin-left: 5px;
+}
 .photo-box{
   padding: 5px;
   overflow: hidden;
@@ -20,11 +37,23 @@
   border: 1px solid #ddd;
   box-shadow: 0px 0px 10px #ddd;
   background: #f7f7f7;
+  margin-bottom: 2px;
 }
 .photo-src{
   max-width: 100%;
   max-height: 100%;
 }
 .photo-title{
+  display: inline-block;
+  height: 25px;
+  line-height: 25px;
+  font-size: 12px;
+  border: 1px solid #fff;
+}
+.input-title{
+  height: 25px;
+  line-height: 25px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
   font-size: 12px;
 }
